--- a/Position CSS/centerUsingFlexBox.html
+++ b/Position CSS/centerUsingFlexBox.html
@@ -13,6 +13,8 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      /* flex-direction: row-reverse; */
+      /* flex-direction: column-reverse; */
     }
     .centre {
       background-color: orangered;
